--- a/react-app/src/components/Cart/CartItemList/CartItem/cartitem.module.css
+++ b/react-app/src/components/Cart/CartItemList/CartItem/cartitem.module.css
@@ -31,12 +31,26 @@
   box-shadow: 1px 1px 5px 2px rgba(80, 80, 80, 0.5);
 }
 
+.adoptedStamp {
+  position: absolute;
+  max-width: 40px;
+  min-width: 40px;
+  height: 40px;
+  bottom: -15px;
+  right: -15px;
+  border-radius: 50%;
+  margin: 10px;
+  background-color: pink;
+  box-shadow: 0px 0px 12px 4px pink;
+}
+
 .cardText {
+  color: black;
   display: flex;
   flex-direction: column;
   justify-content: space-evenly;
   align-items: flex-start;
-  color: black;
+  width: 100%;
 }
 
 .catName {
