--- a/react-app/src/components/Cart/cart.module.css
+++ b/react-app/src/components/Cart/cart.module.css
@@ -1,8 +1,18 @@
-.cartArea {
+.cartArea,
+.emptyCartArea {
   display: flex;
-  flex-direction: row;
   gap: 40px;
   padding-top: 50px;
+}
+.cartArea {
+  flex-direction: row;
+  align-items: flex-start;
+}
+
+.emptyCartArea {
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
 }
 
 .header {
