--- a/react-app/src/components/Cat/cat.module.css
+++ b/react-app/src/components/Cat/cat.module.css
@@ -58,14 +58,11 @@
   height: 96px;
   bottom: -35px;
   right: -35px;
-  /* background-position: 50% 50%;
-  background-size: cover;
-  background-repeat: no-repeat; */
   border-radius: 50%;
   margin: 10px;
-  /* border: 1px solid rgba(80, 80, 80, 0.5); */
   background-color: pink;
   box-shadow: 0px 0px 12px 4px pink;
+
 }
 
 .catBasicInfo {
